oracle/prod/freshrss/freshrss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: freshrss

spec:
  rules:
    - host: freshrss.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  freshrss
                port:
                  number: 80
